Bug 106385 - FILEOPEN: Crash when clicking on a spreadsheet with many comments
Summary: FILEOPEN: Crash when clicking on a spreadsheet with many comments
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 106433 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-03-07 13:42 UTC by Xisco Faulí
Modified: 2017-03-08 10:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb backtrace (183.84 KB, text/x-log)
2017-03-07 13:44 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-03-07 13:42:45 UTC
Steps:
1. Open attachment 122489 [details] from bug 97698 or attachment 96007 [details] from bug 76324
2. Once it's open, click on different places of the spreadsheet until it crashes

Reproduced in

Version: 5.4.0.0.alpha0+
Build ID: eb7b03b052ffe8c2c577b2349987653db6c53f76
CPU threads: 1; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-02-26_22:34:18
Locale: es-ES (es_ES); Calc: group

and

Version: 5.4.0.0.alpha0+
Build ID: d3676ceeec55a41337ce5e6bc596f4f100d0638e
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-03-07 13:44:00 UTC
Created attachment 131697 [details]
gdb backtrace
Comment 2 Xisco Faulí 2017-03-07 13:58:36 UTC
Regression introduced by: (using attachment 122489 [details] )

author	Eike Rathke <erack@redhat.com>	2017-02-24 14:30:24 (GMT)
committer	Eike Rathke <erack@redhat.com>	2017-02-24 15:24:28 (GMT)
commit 5d9f7548bcf842c613c26e5ab192199b415e6004 (patch)
tree dfa106679c99d7650d180505a47bc0d1b6359458
parent 860527e009c7be978756aed876504d5f0a0cabe7 (diff)
a first stab against the note caption ownership mess
This should not change any existing behavior, but may help tracking down
what happens where and when. The final goal is to let ScCaptionPtr also
handle deletion of caption objects once they're unreferenced and guard
against dangling pointers and double delete, and/or to manage transfer
of ownership to the drawing layer. Further improvement to the structure
could involve a head data element so that the duplicated (and unused
except in head) mnRefs field could be eliminated and the walk simplified
when removing an element from the list.

Adding Cc: to Eike Rathke
Comment 3 Eike Rathke (retired, only occasionally showing up) 2017-03-07 16:48:15 UTC
Hum yeah, that construction site isn't finished yet..
The backtrace of comment 1 is something different though, that's a crash in Writer.
Comment 4 Commit Notification 2017-03-07 19:39:16 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=da1f3b1c94af14767a638cc824ec510e889843eb

Resolves: tdf#106385 don't release ScCaptionPtr too early

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2017-03-08 10:08:14 UTC
*** Bug 106433 has been marked as a duplicate of this bug. ***
Comment 6 Xisco Faulí 2017-03-08 10:28:17 UTC Comment hidden (obsolete)
Comment 7 Xisco Faulí 2017-03-08 10:32:51 UTC Comment hidden (obsolete)