Resolves: tdf#106385 don't release ScCaptionPtr too early

Change-Id: Ibf0afa1d6c582251a5a2e00f2d6d9c1f267bf746